--- a/style.css
+++ b/style.css
@@ -32,8 +32,8 @@
   }
 
   header{
-    display: flex;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-around; */
     align-items: center;
     color: #eae9e4;
     background-color: #1c1717;
@@ -41,12 +41,24 @@
     width: 100%;
     font-size: 12px;
     letter-spacing: 0.2em;
+    position: relative;
     /* padding:  10px */
     
    
-    
-    
   }
+
+  header>span:first-of-type{
+    position: absolute;
+    left:20px;
+    top:13px;
+  }
+
+  header>span:last-of-type{
+    position: absolute;
+    right:20px;
+    top:8px;
+  }
+  
  
 header:last-child{
   font-size: 24px;
